--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,9 @@ nav a:hover {
 .main_content h1 {
     padding-left: 15px;
 }
+.main_content p {
+    padding-left: 20px;
+}
 .main_content {
     position: relative;
 }
