--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,33 @@ footer {
 footer p {
     text-align: center;
 }
+/*-----------------login & register-------------------*/
+.login {
+    padding-left: 20px;
+}
+#login_button {
+    margin: 10px;
+    padding: 5px;
+}
+.login p {
+    font-size: 1.3rem;
+}
+
+.register {
+    padding-left: 20px;
+}
+#register_button {
+    margin: 10px;
+    padding: 5px;
+}
+
+
+
+
+
+
+
+
 
 @media only screen and (min-width: 55rem) {
     body {
