--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ footer p {
     padding-left: 20px;
     padding-bottom: 20px;
 }
-#btn {
+input[type=submit] {
     margin: 10px;
     padding: 5px;
 }
